<!--
  ~ Copyright WeiLianYang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">弹幕神器</string>

    <string name="text_title">相信自己就是那个最靓的仔</string>

    <string name="text_cool">闪酷</string>
    <string name="text_bullet">弹幕</string>
    <string name="text_dazzle">炫彩</string>

    <string name="text_hint">输入要展示的文本</string>
    <string name="text_confirm">确定</string>
    <string name="text_speed">速度</string>
    <string name="text_size">字号</string>
    <string name="text_color">颜色</string>

    <string name="text_hint1">我</string>
    <string name="text_hint2">好️</string>
    <string name="text_hint3">😍</string>
    <string name="text_hint4">你</string>
    <string name="text_hint5">!️</string>
</resources>