<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright WeiLianYang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <com.william.gradient.GradientTextView
        android:id="@+id/gradientTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/text_title"
        android:textSize="25sp"
        app:gradient_animate="true"
        app:gradient_direction="leftToRight"
        app:gradient_speed="normal"
        app:layout_constraintBottom_toTopOf="@+id/mButtonCool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/mButtonCool"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_circle_primary"
        android:elevation="20dp"
        android:text="@string/text_cool"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide_center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/mButtonBullet"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_circle_black"
        android:elevation="20dp"
        android:text="@string/text_bullet"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/mButtonCool"
        app:layout_constraintTop_toBottomOf="@+id/guide_center" />

    <Button
        android:id="@+id/mButtonDazzle"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_circle"
        android:elevation="20dp"
        android:text="@string/text_dazzle"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/mButtonCool"
        app:layout_constraintTop_toBottomOf="@+id/guide_center" />

</androidx.constraintlayout.widget.ConstraintLayout>